--- a/config.toml
+++ b/config.toml
@@ -85,10 +85,10 @@ defaultContentLanguageInSubdir = false
   #
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
-  highlight = true
-  highlight_languages = ['fsharp']
-  # highlight_style = "github"
-  # highlight_version = "9.9.0"
+highlight = true
+highlight_languages = ['fsharp']
+highlight_style = "github"
+highlight_version = "9.12.0"
 
   # Enable native social sharing buttons?
   sharing = true
