Добавил название компании.

--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ defaultContentLanguageInSubdir = false
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "mail@DmitriyVlasov.ru"
-  address = "наб.реки Мойки 37А, Санкт-Петербург, Российская Федерация"
+  address = "Компания Авара АЙ ТИ Солюшенс, наб.реки Мойки 37А, Санкт-Петербург, Российская Федерация"
   office_hours = "С понедельника по пятницу 10:00 to 18:00"
   phone = "+7 (904) 601-95-40"
 #  skype = "vlasovde@outlook.com"
