--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://DmitriyVlasov.ru/"  # End your URL with a `/` trailing slash.
+baseurl = "https://DmitriyVlasov.ru/"  # End your URL with a `/` trailing slash.
 title = "Дмитрий Власов"
 copyright = "&copy; Creative Commons Attribution-ShareAlike 3.0 Unported"
 
@@ -29,9 +29,9 @@ defaultContentLanguageInSubdir = false
   description = "Notes business analyst."
   
   name = "Дмитрий Власов"
-  role = "Старший ERP разработчик"
+  role = "Старший BI разработчик"
   organization = "Awara IT Solutions"
-  organization_url = "http://www.awaraitsolutions.com/home_ru.asp"
+  organization_url = "http://http://awara-it.com/ru_RU/"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "mail@DmitriyVlasov.ru"
@@ -146,7 +146,7 @@ highlight_version = "9.12.0"
   [[params.social]]
     icon = "facebook"
     icon_pack = "fa"
-    link = "//facebook.com/DmitriyVasov"
+    link = "//facebook.com/DmitriyVasov.ru"
 
 
   [[params.social]]
