--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ defaultContentLanguageInSubdir = false
   name = "Дмитрий Власов"
   role = "Старший BI разработчик"
   organization = "Awara IT Solutions"
-  organization_url = "http://http://awara-it.com/ru_RU/"
+  organization_url = "http://awara-it.com/ru_RU/"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "mail@DmitriyVlasov.ru"
