--- a/config.toml
+++ b/config.toml
@@ -146,8 +146,7 @@ highlight_version = "9.12.0"
   [[params.social]]
     icon = "facebook"
     icon_pack = "fa"
-    link = "//facebook.com/DmitriyVasov.ru"
-
+    link = "//facebook.com/DmitriyVlasov.ru"
 
   [[params.social]]
     icon = "linkedin"
