--- a/config.toml
+++ b/config.toml
@@ -175,6 +175,11 @@ highlight_version = "9.12.0"
   weight = 1
 
 [[menu.main]]
+  name = "Блог"
+  url = "#blog"
+  weight = 10
+
+[[menu.main]]
   name = "Статьи"
   url = "#posts"
   weight = 20
