Черновик курса Databricks 101

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -37,10 +37,10 @@
     weight = 40
 
 # # Посмотреть подробнее как сделано:
-#   [[ru.menu.main]]
-#     name = "Курсы"
-#     url = "courses/"
-#     weight = 50
+  [[ru.menu.main]]
+    name = "Курсы"
+    url = "courses/"
+    weight = 50
 
   [[ru.menu.main]]
     name = "Контакты"
