--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -40,8 +40,8 @@
 
 # # Посмотреть подробнее как сделано:
   [[ru.menu.main]]
-    name = "Курсы"
-    url = "courses/"
+    name = "Развлечения"
+    url = "fun/"
     weight = 50
 
   [[ru.menu.main]]
