Renamed a section from the fun to the domain

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -40,8 +40,8 @@
 
 # # Посмотреть подробнее как сделано:
   [[ru.menu.main]]
-    name = "Развлечения"
-    url = "fun/"
+    name = "Интересы"
+    url = "domain/"
     weight = 50
 
   [[ru.menu.main]]
