--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -79,6 +79,9 @@ privacy_pack = false
 #   `repo` defines the repository URL. `editable` defines which page types can be edited.
 edit_page = {repo_url = "https://github.com/DmitriyVlasov/Blog", repo_branch = "master", editable = {docs = true, page = false, post = false}}
 
+# Show related content at the bottom of pages?
+show_related = {docs = true, page = false, post = true, project = true, publication = true, talk = true}
+
 ############################
 ## Contact details
 ##
